<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/home"
    android:background="@color/gris"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Activity.homeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="2"
        android:background="@color/background">
        <TextView
            android:id="@+id/textGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="3"
        >
        <!--ROW 1-->
        <!--Colum 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/favoritos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="200dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:drawableTop="@drawable/favorite"
                android:id="@+id/favoritosText"
                android:orientation="vertical"
                android:padding="5dp"
                android:text="@string/favoritos"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bebidas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="200dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:focusable="true">

            <TextView
                android:id="@+id/bebidasText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:drawableTop="@drawable/bebida"
                android:orientation="vertical"
                android:padding="5dp"
                android:text="@string/bebidas"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <!-- Row 2 -->
        <!-- Column 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/crear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:drawableTop="@drawable/ic_add2"
                android:id="@+id/crearText"
                android:orientation="vertical"
                android:padding="5dp"
                android:text="@string/crear_bebidas"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <!-- Column 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/inventario"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:drawableTop="@drawable/inventario"
                android:id="@+id/inventarioText"
                android:orientation="vertical"
                android:padding="5dp"
                android:text="@string/inventario"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </GridLayout>
</LinearLayout>